# pipeline

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac  pipeline_conf.json  pipeline_daemon.py  pipeline_runner.py  requirements-dev.txt  travis.sh
app/common_deps/cryptography-1.4-py2.7.egg-info/: installed-files.txt
app/common_deps/idna-2.1.dist-info/: RECORD
app/common_deps/lib/: libssl.so.10
app/common_deps/pyasn1-0.1.9.dist-info/: RECORD
pipespec/: blend.pipe  cmd.pipe  grayscale.pipe  mirror_effect.pipe  parlink_blend.pipe  picture_in_picture.pipe  random_cut.pipe  rek.pipe  rek_mod_draw.pipe  rek_mod_draw_smart.pipe  rek_stealwork.pipe  roundtrip.pipe  rpc_bench.pipe  scale.pipe  singlestage_transform.pipe  stream_grayscale.pipe  video_filter.pipe
plot/: pb2_to_csv.py  plot_common_lineages.py  plot_completion_time.py  plot_lineages.py  plot_stack.py  running_time.py  util.py
sprocket/: Makefile.am  pipeline.py
sprocket/controlling/common/: handler.py  network.py  socket_nb.py
sprocket/controlling/tracker/: machine_state.py  task.py  tracker.py  util.py
sprocket/controlling/worker/: worker.py
sprocket/delivery_function/: anypair_delivery_func.py  default_delivery_func.py  pair_delivery_func.py  serialized_frame_delivery_func.py  serialized_scene_delivery_func.py  serialzed_frame_with_empty_delivery_func.py  smart_serialized_frame_delivery_func.py
sprocket/platform/: launcher.py
sprocket/platform/aws_lambda/: Makefile.am  configure.ac  lambda_function.py  launcher.py
sprocket/platform/aws_lambda/common_deps/pip-6.0.8.dist-info/: RECORD
sprocket/platform/aws_lambda/common_deps/pyOpenSSL-16.0.0.dist-info/: RECORD
sprocket/platform/aws_lambda/common_deps/setuptools-12.0.5.dist-info/: RECORD
sprocket/platform/aws_lambda/cpp/: Makefile.am
sprocket/platform/aws_lambda/cpp/frontend/: Makefile.am
sprocket/platform/aws_lambda/cpp/launch/: Makefile.am  launch.cc  launch.hh
sprocket/platform/aws_lambda/cpp/pylaunch/: pylaunchmodule.cc
sprocket/platform/aws_lambda/m4/: .gitignore
sprocket/platform/aws_lambda/sample_app/: MP4Box  amend_m4s.py  youtube-dl
sprocket/platform/aws_lambda/sample_app/lib/: libx264.so.148
sprocket/platform/aws_lambda/sample_app/lib/pkgconfig/: gpac.pc
sprocket/platform/gcp_functions/: entry.py  index.js  launcher.py  package.json
sprocket/platform/gcp_functions/common_deps/asn1crypto-0.24.0.dist-info/: RECORD
sprocket/platform/gcp_functions/common_deps/boto3-1.6.3.dist-info/: RECORD
sprocket/platform/gcp_functions/common_deps/botocore-1.9.3.dist-info/: RECORD
sprocket/platform/gcp_functions/common_deps/docutils-0.14.dist-info/: RECORD
sprocket/platform/gcp_functions/common_deps/env/: pip-selfcheck.json
sprocket/platform/gcp_functions/common_deps/lib/: libcrypto.so.1.1  libssl.so.10
sprocket/platform/gcp_functions/common_deps/pycparser-2.14-py2.7.egg-info/: installed-files.txt
sprocket/platform/gcp_functions/common_deps/s3transfer-0.1.13.dist-info/: RECORD
sprocket/platform/gcp_functions/sample_app/lib/: libx264.so.152
sprocket/scheduler/: __init__.py  abstract_schedulers.py  breadth_first_scheduler.py  priority_scheduler.py  random_scheduler.py  simple_scheduler.py  streaming_scheduler.py  util.py
sprocket/service/: pipeline_server.py
sprocket/stages/: C_C_speculative_transform.py  C_C_stealwork_transform.py  C_F_stealwork_decode.py  __init__.py  blend.py  cmd.py  ddos.py  decode.py  decode_from_chunked_link.py  distribute_link_mod.py  draw.py  draw_box_modular.py  duplicate_filter.py  encode.py  encode_frame_list.py  encode_frame_list_modular.py  encode_to_dash.py  grayscale.py  grayscale_flat.py  matchFace.py  merge_filter.py  monostage_gs.py  my_decode.py  null.py  parallelize_link.py  pixscale.py  random_cut.py  rek.py  rek_decode.py  rek_modular.py  rotate.py  rpc_bench.py  scale.py  scene_keep_mod.py  scenechange.py  sceneemit_modular.py  sopen.py  stream_link.py  util.py  video_filter.py
sprocket/util/: amend_mpd.py  durable_queue.py  lightlog.py  media_probe.py  misc.py  s3signurl.py
src/: Makefile.am  makebench  pipeline_conf.json  pipeline_daemon.py  pipeline_runner.py
src/pipeline/: Makefile.am  README.md  __init__.py  mu_conf.json  pipeline.py  pipeline_conf.json  pipeline_daemon.py  pipeline_runner.py
src/pipeline/coordinator/: crawling_text_server.py  task_spec_server.py
src/pipeline/jobspec/: Makefile.am  README.md  __init__.py  generator.py  generator2.py  job1.json  job_coordinator.py  job_spec.py  parser.py  validator.py  workflow.py
src/pipeline/pipespec/: blend.pipe  grayscale.pipe  rek.pipe  roundtrip.pipe  thorRek.pipe
src/pipeline/plot/: plot_stack.py
src/pipeline/protos/: pipeline.proto
src/pipeline/schedule/: __init__.py  abstact_schedulers.py  breadth_first_scheduler.py  priority_scheduler.py  random_scheduler.py  scheduler.py  simple_scheduler.py  util.py
src/pipeline/scripts/: README.md  extract_metadata.py  ffmpeg_mp42png_splitter.py  ffmpeg_png2mp4_merger.py  ffmpeg_split.py  metadata.py  metadata.txt
src/pipeline/service/: __init__.py  pipeline_server.py
src/pipeline/stages/: __init__.py  blend.py  cmd.py  ddos.py  decode.py  decode_from_chunked_link.py  decode_from_url.py  distribute_link_mod.py  distribute_sceneChange.py  draw_box.py  draw_box_modular.py  duplicate_filter.py  encode.py  encode_frame_list.py  encode_frame_list_modular.py  encode_to_dash.py  googleFace.py  googleFace_Mic.py  grayscale.py  intermediate_coupled_ConnectScenes.py  merge_filter.py  monostage_gs.py  (+20 more)
src/pipespec/: blend.pipe  ddos.pipe  grayscale.pipe  mirror_effect.pipe  multi_stage.pipe  null.pipe  null_forward.pipe  parlink_grayscale.pipe  parlink_roundtrip.pipe  picture_in_picture.pipe  random_cut.pipe  rek.pipe  rek_Mic_scene_par.pipe  rek_mod_draw.pipe  rek_mod_draw_smart.pipe  rek_modular.pipe  rek_modular_draw.pipe  rek_modular_scene.pipe  rek_scene_par.pipe  rek_scenekeep_scene_par.pipe  scale.pipe  vidstab.pipe
src/plot/: pb2_to_csv.py  plot_CDF.py  plot_CDF_all.py  plot_CDF_decode_emit.py  plot_stack.py  util.py
(+17 files in other folders)
